fix: homepage horizontal scroll on desktop

--- a/src/global/styles/style.css
+++ b/src/global/styles/style.css
@@ -13,6 +13,7 @@
 
 body {
 	background-color: var(--site-bg-color);
+	overflow-x: hidden;
 }
 
 a {
